- method SCIPgetBinvarRepresentative() can now also be called in problem creation stage
- additional parameter "maxpricerounds" in method SCIPsolveProbingLPWithPricing()
- changed name of method SCIPpresolGetNVarTypes() to SCIPpresolGetNChgVarTypes()
- changed name of method SCIPconshdlrGetNVarTypes() to SCIPconshdlrGetNChgVarTypes()

plugins:
- new primal heuristic "shifting"
- new separator "redcost" which replaces the internal reduced cost strengthening
- new propagator "rootredcost" which applies reduced cost fixing at the root node whenever a best new primal solution
  was found
- new constraint handler "bounddisjunction"
- new methods SCIPgetRowKnapsack(), SCIPgetRowLinear(), SCIPgetRowLogicor(), SCIPgetRowSetppc(), and SCIPgetRowVarbound()
  for obtaining the linear relaxation of a corresponding constraint
- new methods SCIPgetNVarsAnd() and SCIPgetVarsAnd()
- new methods SCIPgetWeightsKnapsack(), SCIPgetNVarsKnapsack(), SCIPgetVarsKnapsack(), and SCIPgetWeightsKnapsack()
- new methods SCIPgetNVarsLinear(), SCIPgetVarsLinear(), and SCIPgetValsLinear()
- new methods SCIPgetNVarsOr() and SCIPgetVarsOr()
- new methods SCIPgetLhsVarbound(), SCIPgetRhsVarbound(), SCIPgetVarVarbound(), SCIPgetVbdvarVarbound(), and
  SCIPgetVbdcoefVarbound()
- new methods SCIPgetNVarsXor() and SCIPgetVarsXor()
- knapsack presolver now generates cliques in the clique table (this essentially solves neos1.mps)
- LP and MPS file readers are now able to parse lazy constraints and user cuts sections
- diving heuristics abort earlier (did not come back in reasonable time on fast0507)
- renamed "sol" file reader to "fix" file reader (reads partial solution files and fixes variables to the given values)
- added "sol" file reader which reads complete solution files and adds the solutions to the solution pool
- additional flag "delay" for pricers
- new presolver "inttobinary"
- new display column "lpobj"

parameters:
- new parameter constraints/linear/separateall